# hackbot

./: .gitignore  README.md  RELEASE_NOTES_kmod-v0.1.1.md  RELEASE_NOTES_kmod-v0.1.md  RELEASE_NOTES_viz-v0.1.md  conversation_with_hackbot.md  detailed_index.md  general_index.md  my_insight.md
docs/: ARCHITECTURE.md  FLOW_REPORT.md  IMPLEMENTATION_REPORT.md  INVESTIGATION_REPORT.md  KERNEL_AS_LANGUAGE_PLAN.md  PLAN.md  REVIEW_v0.1.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
hackbot-kmod/: .gitignore  Kbuild  Makefile  README.md  TESTING.md  hackbot.rs  hackbot_agent.rs  hackbot_config.rs  hackbot_console.c  hackbot_console.h  hackbot_context.rs  hackbot_device.rs  hackbot_files.c  hackbot_files.h  hackbot_forward.rs  hackbot_fpu.c  hackbot_fpu.h  hackbot_kprobe.c  hackbot_kprobe.h  hackbot_main.rs  hackbot_math.rs  hackbot_memory.rs  hackbot_model.rs  hackbot_net.rs  hackbot_ngram.c  hackbot_ngram.h  hackbot_patrol.c  hackbot_patrol.h  hackbot_state.rs  hackbot_tokenizer.c  hackbot_tokenizer.h  hackbot_tokenizer.rs  hackbot_tools.rs  hackbot_trace.c  hackbot_trace.h  hackbot_types.rs  hackbot_vllm.rs  test.sh  test_tokenizer.sh
server-rs/: Cargo.toml
server-rs/crates/hackbot-server/: Cargo.toml
server-rs/crates/hackbot-server/src/: gateway.rs  main.rs  mock_data.rs  trace_loader.rs  trace_replayer.rs  world_model.rs
tools/: export_hackbot.py  export_hackbot_fp16.py  int8_reference.py  verify_fp16_forward.py  verify_generation.py  verify_hackbot.py  verify_prefill.py  verify_tokenizer.py
traces/: format.md  (+1 more)
(+21 files in other folders)
